mpegtspacketizer: avoid timestamp overflows

Cause timing to break in the pipeline that can lead to a stall

https://bugzilla.gnome.org/show_bug.cgi?id=733837